cluster/istio-system/istio/serviceentry.yaml
# Additional entries into Istio’s internal service registry
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: googleapis
  namespace: 'istio-system'
spec:
  hosts:
    - 'storage.googleapis.com'
    - 'oauth2.googleapis.com'
  ports:
    - name: https-googleapis
      number: 443
      protocol: TLS
  resolution: DNS
  location: MESH_EXTERNAL
